css/style.css
/* -----------


Variables 

----------*/
/* -----------


Animations

----------*/
@keyframes glitch {
  2%,
  64% {
    transform: translate(2px, 0) skew(0deg);
  }
  4%,
  60% {
    transform: translate(-2px, 0) skew(0deg);
  }
  62% {
    transform: translate(0, 0) skew(5deg);
  }
}

@keyframes shake {
  0% {
    transform: rotate(-10deg);
  }
  50% {
    transform: rotate(5deg);
  }
  100% {
    transform: rotate(0);
  }
}

@keyframes bounce {
  0% {
    transform: translateX(-2em);
  }
  50% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-2em);
  }
}

@keyframes opacity {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 0;
    transform: translateY(-1em);
  }
  100% {
    opacity: 1;
  }
}

@keyframes spiral {
  0% {
    clip-path: polygon(
      0% 0%,
      100% 0%,
      100% 100%,
      0% 100%,
      0% 25%,
      75% 25%,
      75% 75%,
      25% 75%,
      25% 50%,
      50% 50%,
      25% 50%,
      25% 75%,
      75% 75%,
      75% 25%,
      0% 25%
    );
  }
  14.25% {
    clip-path: polygon(
      0% 0%,
      100% 0%,
      100% 100%,
      0% 100%,
      0% 25%,
      75% 25%,
      75% 75%,
      50% 75%,
      50% 50%,
      50% 50%,
      25% 50%,
      25% 75%,
      75% 75%,
      75% 25%,
      0% 25%
    );
  }
  28.5% {
    clip-path: polygon(
      0% 0%,
      100% 0%,
      100% 100%,
      0% 100%,
      0% 25%,
      75% 25%,
      75% 50%,
      50% 50%,
      50% 50%,
      50% 50%,
      25% 50%,
      25% 75%,
      75% 75%,
      75% 25%,
      0% 25%
    );
  }
  42.75% {
    clip-path: polygon(
      0% 0%,
      100% 0%,
      100% 100%,
      0% 100%,
      0% 25%,
      25% 25%,
      25% 50%,
      25% 50%,
      25% 50%,
      25% 50%,
      25% 50%,
      25% 75%,
      75% 75%,
      75% 25%,
      0% 25%
    );
  }
  57% {
    clip-path: polygon(
      0% 0%,
      100% 0%,
      100% 100%,
      0% 100%,
      0% 75%,
      25% 75%,
      25% 75%,
      25% 75%,
      25% 75%,
      25% 75%,
      25% 75%,
      25% 75%,
      75% 75%,
      75% 25%,
      0% 25%
    );
  }
  71.25% {
    clip-path: polygon(
      0% 0%,
      100% 0%,
      100% 100%,
      75% 100%,
      75% 75%,
      75% 75%,
      75% 75%,
      75% 75%,
      75% 75%,
      75% 75%,
      75% 75%,
      75% 75%,
      75% 75%,
      75% 25%,
      0% 25%
    );
  }
  85.5% {
    clip-path: polygon(
      0% 0%,
      100% 0%,
      100% 25%,
      75% 25%,
      75% 25%,
      75% 25%,
      75% 25%,
      75% 25%,
      75% 25%,
      75% 25%,
      75% 25%,
      75% 25%,
      75% 25%,
      75% 25%,
      0% 25%
    );
  }
  100% {
    clip-path: polygon(
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 0%,
      0% 25%,
      0% 25%,
      0% 25%,
      0% 25%,
      0% 25%,
      0% 25%,
      0% 25%
    );
  }
}

/* -------

Base Styles


---------*/
* {
  margin: 0;
  padding: 0;
  text-decoration: none;
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: black;
  color: #ffff;
  font-family: "Open Sans";
  width: 100%;
  overflow-x: hidden;
}

.heading {
  font-family: "Oxygen";
  color: #e4e4e4;
  font-size: 1.5em;
  margin-left: 1em;
}
.heading span {
  /* border-bottom: #707070 solid 0.1em; */
}

/* -------


Desktop Styles

-------*/
.header {
  top: 0;
  z-index: 3;
  display: flex;
  padding: 1em 2em;
  justify-content: space-between;
}
.header__logo {
  width: 3em;
}
.header__menu {
  width: 2.5em;
  cursor: pointer;
}
.header__middle {
  position: absolute;
  position: fixed;
  width: 100%;
  height: 100vh;
  background-color: #ffff;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 3;
  display: none;
  animation: spiral reverse 1s ease;
}
.header__middle--leave {
  animation: spiral 1s ease;
}
.header__middle ul {
  display: flex;
  flex-direction: column;
  height: 100vh;
  justify-content: center;
  align-items: center;
}
.header__middle ul li {
  animation: 1.5s opacity;
  margin-bottom: 3em;
  list-style: none;
}
.header__middle a {
  font-size: 1.5em;
  text-decoration: none;
  color: #000;
  display: block;
  margin: auto;
}
.header__close {
  width: 2em;
  position: absolute;
  right: 2em;
  top: 2em;
  animation: spin 2s;
  cursor: pointer;
}

.landing {
  position: relative;
  height: 80vh;
  text-align: center;
  z-index: 2;
}
.landing__header {
  font-size: 5em;
  font-weight: 900;
  font-family: "Oxygen";
  padding: 1em 0;
}
.landing span {
  margin: 0;
  padding: 0;
  border-bottom: 0.01em solid #09f755;
  padding-bottom: 0.3em;
  background-image: linear-gradient(to bottom, #09f755, #f8f8f8);
  -webkit-background-clip: text;
  color: transparent;
}
.landing__paragraph-con {
  width: 50%;
  margin: 0 auto;
}
.landing__paragraph {
  color: rgba(248, 248, 248, 1);
  line-height: 1.4;
  font-size: 1.4em;
}
.landing__footer {
  position: absolute;
  bottom: 1em;
  right: 2em;
  z-index: 2;
}
.landing__footer img {
  width: 2em;
  margin-right: 2em;
  transition: all 0.2s ease;
}
.landing__footer img:hover,
.landing__footer img:active {
  filter: invert(20%) sepia(3%) blur(0.5px);
  transform: translateY(-2px);
}
.landing__icon {
  width: 2em;
  position: absolute;
  animation: bounce 10s ease-in-out infinite;
  opacity: 1;
  
  /* animation: name duration timing-function delay iteration-count direction fill-mode; */
}
.landing__icon::nth-child(1) {
  animation-delay: .5s;
  animation-direction: alternate;
}
.landing__icon::nth-child(2) {
  animation-delay: 1.6s;
  animation-direction: alternate-reverse;
}
.landing__icon:nth-child(3) {
  animation-delay: 1.2s;
  animation-direction: alternate;
}
.landing__icon:nth-child(4) {
  animation-delay: 2s;
  animation-direction: alternate-reverse;
  
}
.landing__icon:nth-child(5) {
  animation-delay: 3.3s;
  animation-direction: alternate;
}
.landing__icon:nth-child(6) {
  animation-delay: 0.2s;
  filter: invert(40%);
  animation-direction: alternate-reverse;
}
/* ... */

